# rmnest

./: .gitignore  LICENSE  README.md  README.rst  fit_RM.py  ozstar_setup.sh  pyproject.toml  setup.cfg  setup.py
rmnest/: .likelihood.py.swp  .version  COMPILE_FORT  __init__.py  app.py  circular.f90  fit_RM.py  likelihood.py  model.py  utils.py
test/output/: testrun_dynesty.pickle
