[metadata]
name = rmnest
version = 0.1.0
author =
author_email =
url =
description =
long_description = file: README.md
long_description_content_type = text/markdown
license =
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = false
include_package_data = false
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    bilby
    matplotlib

[options.entry_points]
console_scripts =
    rmnest = rmnest.fit_RM:main
